syntax = "proto3";

package minipulsa;
option go_package = "./minipulsa";

message Empty {}
message BasicResponseCodeMessage { string message = 2; }

// authentication service
service AuthenticationService {
  rpc LoginRegister(LoginRegisterRequest) returns (LoginRegisterResponse) {};
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {};
}

message LoginRegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRegisterResponse {
  string token = 1;
  int64 user_id = 2;
}

message ValidateTokenRequest {
  string token = 1;
  int64 user_id = 2;
}

message ValidateTokenResponse { int64 user_id = 1; }

// product service
service ProductService {
  rpc GetProducts(Empty) returns (GetProductsResponse) {};
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {};
}

message Product {
  int64 product_id = 1;
  int64 price = 2;
  string name = 3;
}

message GetProductsResponse { repeated Product products = 1; }

message GetProductRequest { int64 product_id = 1; }

message GetProductResponse { Product product = 1; }

// Order service
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateORUpdateOrderResponse) {};
  rpc UpdateOrder(UpdateOrderRequest) returns (CreateORUpdateOrderResponse) {};
}

message Order {
  int64 order_id = 1;
  int64 product_id = 2;
  int64 user_id = 3;
  int64 wallet_history_id = 4;
  string status = 5;
  string date = 6;
}

message CreateOrderRequest {
  int64 product_id = 1;
  int64 user_id = 2;
}

message UpdateOrderRequest {
  int64 order_id = 1;
  string status = 2;
  int64 wallet_history_id = 3;
}

message CreateORUpdateOrderResponse { Order order = 1; }

// Wallet service
service WalletService {
  rpc GetWalletDetail(GetWalletDetailRequest)
      returns (GetWalletDetailResponse) {};
  rpc UseWallet(UseWalletRequest) returns (UseWalletResponse) {};
}

message Wallet {
  int64 wallet_id = 1;
  int64 user_id = 2;
  int64 order_id = 3;
  int64 amount = 4;
  string date = 5;
}

message HistoryWallet {
  int64 last_amount = 1;
  int64 order_id = 2;
  string date = 3;
}

message UseWalletRequest {
  int64 user_id = 1;
  int64 amount = 2;
  int64 order_id = 3;
}

message UseWalletResponse { int64 wallet_history_id = 1; }

message GetWalletDetailRequest { int64 user_id = 1; }

message GetWalletDetailResponse {
  Wallet wallet = 1;
  repeated HistoryWallet history_wallet = 2;
}
